made about and contact pages

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
 .bundle
 db/*.sqlite3
 log/*.log
+*.log
 tmp/
+/tmp/
 .idea/*
 coverage/*
 doc/coverage/*
 tmp/*
 *DS_Store
+.DS_Store
+.project
 .rspec
 .bundle
+doc/
+*.swp
+*~
+
