--- a/p2p_client/config/database.yml
+++ b/p2p_client/config/database.yml
@@ -1,13 +1,10 @@
 # SQLite version 3.x
 #   gem install sqlite3
 development:
-  adapter: mysql2
-  database: peer
-  username: root
-  password: 18842project
+  adapter: sqlite3
+  database: db/development.sql
   pool: 5
   timeout: 5000
-  socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
