--- a/bootstrap_server/Gemfile
+++ b/bootstrap_server/Gemfile
@@ -43,7 +43,7 @@ gem "rufus-scheduler"
 
 gem 'activemerchant'
 
-
+gem 'rails-xmlrpc'
 #----------------
 # Below gems were already in gem file when downloaded from GitHub
 # They are all commeted out, as they are just for reference.
